--- a/_includes/themes/bootstrap-3/default.html
+++ b/_includes/themes/bootstrap-3/default.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
-    <title>{{ page.title }}</title>
+    <title>Home</title>
     {% if page.description %}<meta name="description" content="{{ page.description }}">{% endif %}
     <meta name="author" content="{{ site.author.name }}">
 
@@ -25,7 +25,7 @@
 
 	<!-- Custom styles for this template -->
 	<link href="{{ ASSET_PATH }}/css/custom.css" rel="stylesheet">
-	<link href="{{ ASSET_PATH }}/css/syntax.css" rel="stylesheet">
+	<!-- link href="{{ ASSET_PATH }}/css/syntax.css" rel="stylesheet" -->
     <link href="{{ ASSET_PATH }}/css/font-awesome.min.css" rel="stylesheet">
   
 
@@ -38,11 +38,12 @@
 
     <!-- Fav and touch icons -->
     <!-- Update these with your own images
-      <link rel="shortcut icon" href="images/favicon.ico">
+      <link rel="shortcut icon" href="images/scoop-it.png">
       <link rel="apple-touch-icon" href="images/apple-touch-icon.png">
       <link rel="apple-touch-icon" sizes="72x72" href="images/apple-touch-icon-72x72.png">
       <link rel="apple-touch-icon" sizes="114x114" href="images/apple-touch-icon-114x114.png">
     -->
+    <link rel="shortcut icon" href="{{ ASSET_PATH }}/images/scoop-it.ico">
 
     <!-- atom & rss feed -->
     <link href="{{ BASE_PATH }}{{ site.JB.atom_path }}" type="application/atom+xml" rel="alternate" title="Sitewide ATOM Feed">
@@ -104,8 +105,7 @@
 
     <div id="footer">
       <div class="container">
-        <p>&copy; {{ site.time | date: '%Y' }} {{ site.author.name }}
-        </p>
+        <p class="text-muted credit">&copy; {{ site.time | date: '%Y' }} Provided by {{ site.author.name }}</p>
       </div>
     </div>
 
