change nav bar color

--- a/_includes/themes/bootstrap-3/default.html
+++ b/_includes/themes/bootstrap-3/default.html
@@ -37,12 +37,6 @@
     <![endif]-->
 
     <!-- Fav and touch icons -->
-    <!-- Update these with your own images
-      <link rel="shortcut icon" href="images/scoop-it.png">
-      <link rel="apple-touch-icon" href="images/apple-touch-icon.png">
-      <link rel="apple-touch-icon" sizes="72x72" href="images/apple-touch-icon-72x72.png">
-      <link rel="apple-touch-icon" sizes="114x114" href="images/apple-touch-icon-114x114.png">
-    -->
     <link rel="shortcut icon" href="{{ ASSET_PATH }}/images/scoop-it.ico">
 
     <!-- atom & rss feed -->
@@ -75,8 +69,8 @@
   </head>
 
   <body>
-    <div id="wrap">
-      <nav class="navbar navbar-inverse navbar-static-top" role="navigation">
+    <div id="wrap" >
+      <nav class="navbar navbar-custom navbar-static-top" role="navigation">
         <!-- Brand and toggle get grouped for better mobile display -->
         <div class="navbar-header">
           <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#jb-navbar-collapse">
