--- a/assets/themes/bootstrap-3/css/custom.css
+++ b/assets/themes/bootstrap-3/css/custom.css
@@ -23,6 +23,23 @@ body {
  * Main content
 */
 
+.navbar-custom {
+    background-color:#2d6ca2;
+    color:#ffffff;
+    border-radius:0;
+}
+
+.navbar-custom .navbar-nav > li > a {
+    color:#fff;
+}
+.navbar-custom .navbar-nav > .active > a, .navbar-nav > .active > a:hover, .navbar-nav > .active > a:focus {
+    color: #ffffff;
+    background-color:transparent;
+}
+.navbar-custom .navbar-brand {
+    color:#eeeeee;
+}
+
 .main {
   padding: 20px;
 }
