--- a/_includes/themes/bootstrap-3/default.html
+++ b/_includes/themes/bootstrap-3/default.html
@@ -23,7 +23,7 @@
 
 	<!-- Custom styles for this template -->
 	<link href="{{ ASSET_PATH }}/css/custom.css" rel="stylesheet">
-	<!-- link href="{{ ASSET_PATH }}/css/syntax.css" rel="stylesheet" -->
+	<link href="{{ ASSET_PATH }}/css/syntax.css" rel="stylesheet">
     <link href="{{ ASSET_PATH }}/css/font-awesome.min.css" rel="stylesheet">
   
 
