--- a/_includes/themes/bootstrap-3/default.html
+++ b/_includes/themes/bootstrap-3/default.html
@@ -86,6 +86,10 @@
             {% assign pages_list = site.pages %}
             {% assign group = 'navigation' %}
             {% include JB/pages_list %}
+          </ul>
+          <ul class="nav navbar-nav navbar-right">
+            <li><a href="">About Me&nbsp;&nbsp;</a></li>
+          </ul>
         </div><!-- /.navbar-collapse -->
       </nav>
 
